--- a/individual-work/css-flex-1/style.css
+++ b/individual-work/css-flex-1/style.css
@@ -1,24 +1,31 @@
 .page-container {
+    display: inline-flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
     width: 100vw;
     height: 100vh;
-    justify-content: center;
 }
 
 .flex-container {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: center;
-    align-items: normal;
-    align-content: normal;
-    background-color: royalblue;
-    width: 100%;
+    align-items: center;
+    align-content: center;
+    justify-content: space-around;
+    background-color: rgb(168, 187, 240);
+    width: 1200px;
+    padding: 10px;
 }
 
 .flex-items {
-    background-color: crimson;
-    margin: 20px;
+    text-align: center;
+    background-color: rgb(241, 238, 189);
+    width: 100%;
     height: 250px;
+    margin: 10px;    
+    line-height: 250px;
 }
 
 .flex-items:nth-child(1) {
