--- a/individual-work/iw-css-flex-2/style.css
+++ b/individual-work/iw-css-flex-2/style.css
@@ -1,6 +1,4 @@
 :root {
-    /*  width: 100vw;
-    height: 100vh; */
     background-image: url("background-img.jpg");
     background-position: center;
     background-size: cover;
@@ -54,34 +52,32 @@
     display: flex;
     justify-content: center;
 }
-
 .search-items:nth-child(1) {}
 
+/* boxík */
 .middle-container {
+    width: 100vw;
+    height: 80vh;
     display: flex;
     justify-content: center;
+    align-items: center;
     
 }
-
-.middle-items-container {
-    
-}
-.middle-items:nth-child(1)
-{
+.middle-items {
     display: block;
     background-color: white;
     border: white solid 1px;
     border-radius: 25px;
-    padding: 10px;
+    padding: 15px;
     width: 50vw;
-    box-shadow: white 5px;
-}
-.middle-items:nth-child(1) h1 {
+    box-shadow: 0px 0px 20px white;
+}    
+.middle-itemsd h1 {
     font-size: 2rem;
     margin: 5px;
 }
 
-.middle-items:nth-child(1) p {
+.middle-items p {
     margin: 5px;
     margin-top: 15px;
     font-size: 1rem;
