--- a/individual-work/iw-css-flex-2/style.css
+++ b/individual-work/iw-css-flex-2/style.css
@@ -40,6 +40,7 @@
     display: flex;
     color: white;
     font-size: 1.1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .navigation-items:nth-child(1) {}
@@ -71,6 +72,7 @@
     padding: 15px;
     width: 50vw;
     box-shadow: 0px 0px 20px white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }    
 .middle-itemsd h1 {
     font-size: 2rem;
@@ -81,4 +83,5 @@
     margin: 5px;
     margin-top: 15px;
     font-size: 1rem;
+    
 }
