--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -1,14 +1,156 @@
-body{
-   /*  background-image: url("background.jpeg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: blur(15px); */  
-                background-color: tomato;
-                background-position: left;
-                background-repeat: no-repeat;
-                width: 10vw;
-                height: 10vh;
-                
+:root {
+   background-color: #171717;
+   font-size: 16px;
+   font-family: 'Quicksand', sans-serif;
+   
+}
 
+.navigation-menu {
+   display: flex;
+   align-items: center;
+   justify-content: space-evenly;
+   margin-top: 1%;
+   margin-left: 35%;
+   margin-right: 35%;
+   margin-bottom: 1%;
+   /* background-color: beige; */
+}
+
+.navigation-menu p {
+   font-size: 2rem;
+   color: beige;
+}
+
+.navigation-menu button {
+   font-size: 1.5rem;
+   color: beige;
+}
+
+ul {
+   margin: 0;
+   padding: 15px;
+   display: flex;
+   /* position: absolute; */
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+}
+
+ul li {
+   list-style: none;
+   margin: 15px;
+   padding: 15px;
+}
+
+ul li a {
+   text-decoration: none;
+   position: relative;
+   display: block;
+   width: 135%;
+   height: 100%;
+   text-align: center;
+   line-height: 63px;
+   background: #07253d;
+   border-radius: 25%;
+   /* font-size: 2rem; */
+   /* color: #c20564; */
+   transition: 0.5s;
+}
+
+ul li a::before {
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   border-radius: 50%;
+   background: #ffee10;
+   transition: .5s;
+   transform: scale(.9);
+   z-index: -1;
+}
+
+ul li a:hover::before {
+   transform: scale(1.1);
+   box-shadow: 0 0 15px #ffee10;
+}
+
+ul li a:hover {
+   color: #ffee10;
+   box-shadow: 0 0 5px #ffee10;
+   text-shadow: 0 0 5px #ffee10;
+}
+
+.middle-container {
+   width: 100vw;
+   height: 80vh;
+}
+
+.middle-items {
+   background-color: #07253d;
+   border: #07253d solid 3px;
+   border-radius: 30px;
+   box-shadow: 0px 0px 5px #07253d;
+}
+
+.middle-items button {
+   background-color: #07253d;
+   border: #07253d solid 1px;
+   border-radius: 30px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   box-shadow: 0px 0px 10px #07253d;
+   padding: 12px;
+   padding-left: 23px;
+   padding-right: 23px;
+}
+
+.middle-items button:hover {
+   background-color: beige;
+   color: #07253d;
+   transition-duration: 0.8s;
+}
+
+.section-content {
+
+   font-size: 10px;
+}
+
+.section-content p {
+   font-size: 1rem;
+   color: beige;
+}
+
+.section-content h1 {
+   padding-bottom: 1em;
+   font-size: 2rem;
+   color: beige;
+}
+
+.section-item:nth-child(1) {
+   margin-top: 15em;
+   margin-left: 5%;
+   margin-right: 30%;
+   margin-bottom: 5%;
+   padding: 30px;
+   padding-left: 30px;
+   padding-right: 30px;
+   border: #07253d 1px solid;
+   border-radius: 30px;
+   box-shadow: 0px 0px 10px #07253d;
+}
+
+.section-item:nth-child(2) {
+
+   margin-left: 30%;
+   margin-right: 5%;
+   margin-bottom:0%;
+   padding: 30px;
+   padding-left: 30px;
+   padding-right: 30px;
+   border: #07253d 1px solid;
+   border-radius: 30px;
+   box-shadow: 0px 0px 10px #07253d;
 }
