--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -2,35 +2,36 @@
    background-color: #171717;
    font-size: 16px;
    font-family: 'Quicksand', sans-serif;
-   
 }
-
+#bg {
+   margin-right: 5%;
+   margin-left: 5%;
+   min-height: 100vh;
+   background-image: repeating-linear-gradient(90deg, #141313, #141313 3px, #171717 3px, #171717 390px);  
+}
 .navigation-menu {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    margin-top: 1%;
-   margin-left: 35%;
-   margin-right: 35%;
+   margin-right: 32%;
    margin-bottom: 1%;
+   margin-left: 32%;
    /* background-color: beige; */
 }
-
 .navigation-menu p {
    font-size: 2rem;
    color: beige;
 }
-
 .navigation-menu button {
    font-size: 1.5rem;
    color: beige;
 }
-
-ul {
+/* ul {
    margin: 0;
    padding: 15px;
    display: flex;
-   /* position: absolute; */
+   position: absolute; 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
@@ -52,8 +53,8 @@ ul li a {
    line-height: 63px;
    background: #07253d;
    border-radius: 25%;
-   /* font-size: 2rem; */
-   /* color: #c20564; */
+    font-size: 2rem; 
+    color: #c20564; 
    transition: 0.5s;
 }
 
@@ -80,77 +81,118 @@ ul li a:hover {
    color: #ffee10;
    box-shadow: 0 0 5px #ffee10;
    text-shadow: 0 0 5px #ffee10;
-}
-
-.middle-container {
+} */
+.navigation-container {
    width: 100vw;
    height: 80vh;
 }
-
-.middle-items {
+.navigation-items {
    background-color: #07253d;
    border: #07253d solid 3px;
    border-radius: 30px;
    box-shadow: 0px 0px 5px #07253d;
 }
-
-.middle-items button {
+.navigation-items button {
    background-color: #07253d;
-   border: #07253d solid 1px;
+   border: #07253d solid 3px;
    border-radius: 30px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    box-shadow: 0px 0px 10px #07253d;
    padding: 12px;
-   padding-left: 23px;
    padding-right: 23px;
+   padding-left: 23px;
+   opacity: 0.9;
 }
-
-.middle-items button:hover {
+.navigation-items button:hover {
    background-color: beige;
+   box-shadow: 0px 0px 5px beige;
    color: #07253d;
-   transition-duration: 0.8s;
+   transition-duration: 0.65s;
+   opacity: 1;
+   -webkit-transform: scale(1.2);
+   -ms-transform: scale(1.2);
+   transform: scale(1.2);
+   /*  transform: skew(-10deg); */
+   /* border: 3px dotted #ff7a59;
+  color: #ff7a59;
+  background: #fff; */
 }
-
 .section-content {
-
    font-size: 10px;
 }
-
 .section-content p {
    font-size: 1rem;
    color: beige;
 }
-
 .section-content h1 {
    padding-bottom: 1em;
    font-size: 2rem;
    color: beige;
 }
-
+.section-content h2 {
+   font-size: 1.5rem;
+   color: beige;
+}
 .section-item:nth-child(1) {
+   /* background-color: #171717;
+   border: #07253d 1px solid;
+   border-radius: 30px;
+   box-shadow: 0px 0px 10px #07253d; */
    margin-top: 15em;
-   margin-left: 5%;
    margin-right: 30%;
    margin-bottom: 5%;
+   margin-left: 5%;
    padding: 30px;
-   padding-left: 30px;
    padding-right: 30px;
-   border: #07253d 1px solid;
-   border-radius: 30px;
-   box-shadow: 0px 0px 10px #07253d;
+   padding-bottom: 0px;
+   padding-left: 30px;
 }
-
 .section-item:nth-child(2) {
-
-   margin-left: 30%;
+   /* background-color: #171717;
+   border: #07253d 1px solid;
+   border-radius: 30px;
+   box-shadow: 0px 0px 10px #07253d; */
    margin-right: 5%;
-   margin-bottom:0%;
+   margin-bottom: 0%;
+   margin-left: 30%;
    padding: 30px;
-   padding-left: 30px;
    padding-right: 30px;
+   padding-left: 30px;
+}
+.section-item:nth-child(3){
+   background-color: #171717;   
    border: #07253d 1px solid;
    border-radius: 30px;
    box-shadow: 0px 0px 10px #07253d;
+   /* box-sizing: border-box; */
+   margin-top:6em;
+   margin-right: 25%;
+   margin-bottom: 0%;
+   margin-left: 15%;
+   padding-top: 15px;
+   padding-right: 30px;
+   padding-bottom: 15px;
+   padding-left: 30px;
 }
+.section-item:hover {
+   border: #141313 solid 1px;
+   background: #141313;
+   box-shadow: 30px 30px 0px #07253d;
+   transition-duration: 0.5s;  
+}
+.section-item:hover::after {
+   transition-duration: 0.5;
+}
+
+.stripes-container {}
+
+.stripes-item:nth-child(1) {
+   /* border-left: solid red 3px;
+   height: 150px;
+   margin-left: 5%; */
+   min-height: 100vh;
+   background-image: repeating-linear-gradient(90deg, red, red 3px, #171717 3px, #171717 600px);
+}
+.stripes-item:nth-child(2) {}
