--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -1,6 +1,6 @@
 :root {
    background-color: #171717;
-   font-size: 16px;
+   /* font-size: 16px; */
    font-family: 'Quicksand', sans-serif;
 }
 #bg {
@@ -13,11 +13,10 @@
    display: flex;
    align-items: center;
    justify-content: space-evenly;
-   margin-top: 1%;
-   margin-right: 32%;
+   /* margin-top: 1%; */
+   margin-right: 34%;
    margin-bottom: 1%;
-   margin-left: 32%;
-   /* background-color: beige; */
+   margin-left: 34%;
 }
 .navigation-menu p {
    font-size: 2rem;
@@ -82,15 +81,12 @@ ul li a:hover {
    box-shadow: 0 0 5px #ffee10;
    text-shadow: 0 0 5px #ffee10;
 } */
-.navigation-container {
-   width: 100vw;
-   height: 80vh;
-}
 .navigation-items {
    background-color: #07253d;
    border: #07253d solid 3px;
    border-radius: 30px;
    box-shadow: 0px 0px 5px #07253d;
+   margin-top: 2vh;
 }
 .navigation-items button {
    background-color: #07253d;
@@ -104,6 +100,7 @@ ul li a:hover {
    padding-right: 23px;
    padding-left: 23px;
    opacity: 0.9;
+   
 }
 .navigation-items button:hover {
    background-color: beige;
@@ -120,14 +117,14 @@ ul li a:hover {
   background: #fff; */
 }
 .section-content {
-   font-size: 10px;
+   
 }
 .section-content p {
    font-size: 1rem;
    color: beige;
 }
 .section-content h1 {
-   padding-bottom: 1em;
+   padding-bottom: 10px;
    font-size: 2rem;
    color: beige;
 }
@@ -142,16 +139,16 @@ ul li a:hover {
    border-radius: 30px;
    box-shadow: 0px 0px 25px #07253d; 
    display: inline-block;
-   margin-top: 15em;
+   margin-top: 150px;
    margin-right: 30%;
    margin-bottom: 5%;
    margin-left: 5%;
-   padding: 30px;
+   padding: 25px;
    padding-right: 30px;
-   padding-bottom: 0px;
+   padding-bottom: 20px;
    padding-left: 30px;
 }
-.section-item:nth-child(1)::before{
+/* .section-item:nth-child(1)::before{
   
 }
 .section-item:nth-child(1):hover::before{
@@ -165,7 +162,7 @@ ul li a:hover {
    background: #141313;
    box-shadow: 0px 0px 25px #07253d;
    transition-duration: 0.5s;
-}
+} */
 .section-item:nth-child(2) {
    background-color: #171717;
    border: #07253d 1px solid;
@@ -187,7 +184,7 @@ ul li a:hover {
    box-shadow: 0px 0px 25px #07253d;
    display: inline-block;
    /* box-sizing: border-box;  */
-   margin-top:15em;
+   margin-top:150px;
    margin-right: 1%;
    margin-bottom: 0%;
    margin-left: 57%;
@@ -196,12 +193,12 @@ ul li a:hover {
    padding-bottom: 15px;
    padding-left: 30px;
 }
-/* .section-item:hover {
+ .section-item:hover {
    border: #141313 solid 1px;
    background: #141313;
    box-shadow: 20px 20px 0px #07253d;
    transition-duration: 0.5s;     
-} */
+} 
 /* .section-item:hover::after {
    transition-duration: 0.5;
 } */
