--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -1,115 +1,45 @@
-/* ul {
-   margin: 0;
-   padding: 15px;
-   display: flex;
-   position: absolute; 
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-}
-
-ul li {
-   list-style: none;
-   margin: 15px;
-   padding: 15px;
-}
-
-ul li a {
-   text-decoration: none;
-   position: relative;
-   display: block;
-   width: 135%;
-   height: 100%;
-   text-align: center;
-   line-height: 63px;
-   background: #07253d;
-   border-radius: 25%;
-    font-size: 2rem; 
-    color: #c20564; 
-   transition: 0.5s;
-}
-
-ul li a::before {
-   content: '';
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   border-radius: 50%;
-   background: #ffee10;
-   transition: .5s;
-   transform: scale(.9);
-   z-index: -1;
-}
-
-ul li a:hover::before {
-   transform: scale(1.1);
-   box-shadow: 0 0 15px #ffee10;
-}
-
-ul li a:hover {
-   color: #ffee10;
-   box-shadow: 0 0 5px #ffee10;
-   text-shadow: 0 0 5px #ffee10;
-} */
 :root {
    /* font-size: 16px; */
    font-family: 'Quicksand', sans-serif;
 }
-
 section {
    margin: 0% 5% 0% 5%;
 }
-
 #bg {
    /* background-color: #171717;   
    height: 100vh;
    background-image: repeating-linear-gradient(90deg, #141313, #141313 3px, #171717 3px, #171717 200px); */
    background-image: url("bg1.jpg");
 }
-
 .navigation-menu {
-   /* 
-   position: -webkit-sticky;
-   position: sticky; */
    display: flex;
    align-items: center;
-   justify-content: space-evenly;
-   /* margin-top: 1%; */
+   justify-content: space-evenly;   
    margin: 0% 34% 1% 34%;
 }
-
-.navigation-menu p {
-   font-size: 2rem;
-   color: beige;
-}
-
 .navigation-items {
-   background-color: #07253d;
-   border: #07253d solid 3px;
-   border-radius: 30px;
+   
+   /* border: #07253d solid 3px; */
+   /* border-radius: 30px; */
    box-shadow: 0px 0px 5px #07253d;
    margin-top: 2vh;
 }
-
 .navigation-items button {
    font-size: 1.5rem;
-   color: beige;
-   background-color: #07253d;
-   border: #07253d solid 3px;
-   border-radius: 30px;
+   color: rgb(223, 223, 36);
+   
+   /* border: #07253d solid 3px; */
+   /* border-radius: 30px; */
    text-align: center;
    text-decoration: none; /* aby nebyl odkaz podtržen */
    display: inline-block;
-   box-shadow: 0px 0px 10px #07253d;
+   /* box-shadow: 0px 0px 10px #07253d; */
    padding: 12px 23px 12px 23px;
-   opacity: 0.9;
+   /* opacity: 0.9; */
    position: relative;
    cursor: pointer;
    transition: all 0.9s;
 }
-
 .navigation-items button::after {
    content: ""; /* musí zde být, aby byl následující obsah */
    width: 11px;
@@ -130,24 +60,24 @@ section {
 .navigation-items button:after {
    top: -1px;
    left: -1px;
-   border-top: beige 4px solid;
-   border-left: beige 4px solid;
+   border-top: rgb(199, 24, 190) 4px solid;
+   border-left: rgb(109, 18, 101) 4px solid;
 }
 
 .navigation-items button:before {
    bottom: -1px;
    right: -1px;
-   border-bottom: beige 4px solid;
-   border-right: beige 4px solid;
+   border-bottom: rgb(231, 8, 8) 4px solid;
+   border-right: rgb(187, 187, 20) 4px solid;
 }
 
-.navigation-items button:hover {
+/* .navigation-items button:hover {
    border-top-right-radius: 30px;
    border-bottom-left-radius: 30px;
-}
+} */
 
 .navigation-items button:hover:before {
-   width: 110%;
+   width: 110%; /* jak daleko co pojede */
    height: 115%;
 }
 
@@ -155,27 +85,6 @@ section {
    width: 110%;
    height: 115%;
 }
-
-/* 
-.navigation-items button:hover {
-   background-color: beige;
-   box-shadow: 0px 0px 15px beige;
-   color: #07253d;
-   transition-duration: 0.65s;
-   opacity: 1;
-   -webkit-transform: scale(1.2);
-   -ms-transform: scale(1.2);
-   transform: scale(1.2);
-} */
-/* 
-
-.data-container {
-   background: #ffebee;
-   height: 100vh;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-} */
 .section-content {}
 
 .section-content p {
