--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -21,6 +21,7 @@ section {
    
    /* border: #07253d solid 3px; */
    /* border-radius: 30px; */
+   background-color: #171717;
    box-shadow: 0px 0px 5px #07253d;
    margin-top: 2vh;
 }
@@ -39,6 +40,7 @@ section {
    position: relative;
    cursor: pointer;
    transition: all 0.9s;
+   
 }
 .navigation-items button::after {
    content: ""; /* musí zde být, aby byl následující obsah */
