--- a/individual-work/own-website/extra.css
+++ b/individual-work/own-website/extra.css
@@ -117,3 +117,14 @@ ul li a:hover {
                         </div>
 
                     </div>  */
+
+
+
+
+
+/* #bg {
+
+   height: 100vh;
+   background-image: repeating-linear-gradient(90deg, #141313, #141313 3px, #171717 3px, #171717 200px);
+   background-image: url("bg1.jpg");
+} */
