--- a/individual-work/own-website/style.css
+++ b/individual-work/own-website/style.css
@@ -1,5 +1,4 @@
 :root {
-   /* font-size: 16px; */
    font-family: 'Quicksand', sans-serif;
 }
 
@@ -9,6 +8,12 @@ html, body {
    scrollbar-width: none;
 
 }
+#bg {
+
+   /* height: 100vh;
+   background-image: repeating-linear-gradient(90deg, #141313, #141313 3px, #171717 3px, #171717 200px);
+   background-image: url("bg1.jpg"); */
+} 
 
 html::-webkit-scrollbar, body::-webkit-scrollbar {
    display: none;
@@ -18,35 +23,28 @@ section {
    margin: 0% 5% 0% 5%;
 }
 
-#bg {
-
-   height: 100vh;
-   background-image: repeating-linear-gradient(90deg, #141313, #141313 3px, #171717 3px, #171717 200px);
-   background-image: url("bg1.jpg");
-}
+body {
+   background: #171717;
+   background-image: linear-gradient(90deg, #141313 3px, transparent 0), linear-gradient(#141313 3px, transparent 0);
+   background-size: 200px 200px;
+}  
 
 .navigation-menu {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    margin: 0% 34% 1% 34%;
-   background-color: #171717;
-
 }
 
 .navigation-items {
-   /*    background-color: #171717;*/
-   /* border: #07253d solid 3px; */
-   /* border-radius: 30px; */
-   background-color: #171717;
-   /* box-shadow: 0px 0px 5px #07253d; */
-   margin-top: 2vh;
+   background-color: rgba(23, 23, 23, 0);
+   margin-top: 2.5vh;
 }
 
 .navigation-items button {
    font-size: 1.5rem;
    color: beige;
-   background-color: #171717;
+   background-color: rgba(23, 23, 23, 0);
    border: none;
    border-radius: 3px;
    text-align: center;
@@ -77,27 +75,21 @@ section {
    transition: 0.9s;
 }
 
-.navigation-items button:after {
+.navigation-items button::after {
    top: -1px;
    left: -1px;
    border-top: beige 4px solid;
    border-left: beige 4px solid;
-   /*  box-shadow: 0px 0px 25px ; */
 }
 
-.navigation-items button:before {
+.navigation-items button::before {
    bottom: -1px;
    right: -1px;
    border-bottom: beige 4px solid;
    border-right: beige 4px solid;
-   /* box-shadow: 0px 0px 25px ;  */
-   /* .navigation-items button:hover {
-   border-top-right-radius: 30px;
-   border-bottom-left-radius: 30px;
-} */
 }
 
-.navigation-items button:hover:before {
+.navigation-items button:hover::before {
    width: 110%;
    /* jak daleko co pojede */
    height: 115%;
@@ -109,8 +101,6 @@ section {
    height: 115%;
    box-shadow: 0px 0px 15px;
 }
-
-
 
 .section-content {}
 
@@ -130,13 +120,22 @@ section {
    color: beige;
 }
 
-
+.section-item:nth-child(1) {
+   background-color: #171717;
+   /*  box-shadow: 0px 0px 7px #07253d; */
+   box-shadow: 0px 0px 5px beige;
+   border-radius: 30px;
+   transition: 0.9s;
+   display: inline-block;
+   margin: 150px 30% 5% 5%;
+   padding: 20px 30px 20px 30px;
+}
 
 .section-item:nth-child(2) {
    background-color: #171717;
    /* border: #07253d 1px solid; */
    border-radius: 30px;
-   box-shadow: 0px 0px 5px #07253d;
+   box-shadow: 0px 0px 5px beige;
    display: inline-block;
    margin: 0% 5% 5% 30%;
    padding: 20px 30px 30px 20px;
@@ -150,7 +149,7 @@ section {
    background-color: #171717;
    /* border: #07253d 1px solid; */
    border-radius: 30px;
-   box-shadow: 0px 0px 5px #07253d;
+   box-shadow: 0px 0px 5px beige;
    display: inline-block;
    margin: 0% 1% 4% 45%;
    padding: 20px 30px 20px 30px;
@@ -161,33 +160,23 @@ section {
    background-color: #171717;
    /* border: #07253d 1px solid; */
    border-radius: 30px;
-   box-shadow: 0px 0px 5px #07253d;
+   box-shadow: 0px 0px 5px beige;
    display: inline-block;
    margin: 0% 30% 10% 15%;
    padding: 20px 30px 20px 30px;
    transition: 0.9s;
 }
 
-.section-item:nth-child(1) {
-   background-color: #171717;
-   box-shadow: 0px 0px 3px #07253d;
-   border-radius: 30px;
-   transition: 0.9s;
-   display: inline-block;
-   margin: 150px 30% 5% 5%;
-   padding: 20px 30px 20px 30px;
-}
-
 .section-item:hover {
    background-color: #141313;
-   box-shadow: 0px 0px 30px;
+   box-shadow: 0px 0px 50px;
    border: none;
-   transition-duration: 0.65s;
-   opacity: 1;
+   transition-duration: 0.75s;
    -webkit-transform: scale(1.1);
    -ms-transform: scale(1.1);
    transform: scale(1.1);
 }
+
 .photo-section {
    display: flex;
    justify-content: space-evenly;
@@ -208,7 +197,8 @@ section {
    transition-duration: 0.5s;
 
 }
-.photo-section-item img{
+
+.photo-section-item img {
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
@@ -219,5 +209,10 @@ section {
    -webkit-transform: scale(1.2);
    -ms-transform: scale(1.2);
    transform: scale(1.2);
-   
+
+}
+
+.rounding {
+   border-radius: 10px;
+   box-shadow: 0px 0px 10px beige;
 }
